--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.39.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
@@ -23,7 +25,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.11.11",
     "@types/react": "19.0.7",
+    "drizzle-kit": "^0.30.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
