--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.15",
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.39.0",
+    "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "pg": "^8.13.1",
@@ -27,7 +30,7 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.11",
     "@types/react": "19.0.7",
-    "drizzle-kit": "^0.30.3",
+    "drizzle-kit": "^0.30.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
