--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -30,6 +31,7 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.11",
     "@types/react": "19.0.7",
+    "@types/react-dom": "^19.0.3",
     "drizzle-kit": "^0.30.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
