--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.15",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.1",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
