--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.39.1",
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.471.1",
+    "moment": "^2.30.1",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
